updated Repository, Service and Controller classes